in the binding) being recoded into UTF-8 before being sent to dbus, then the
whole shooting match is done in reverse upon receipt. Nasty.

Dbus-python 0.80 helps a bit as it can render byte-arrays as strings through
use of the byte_arrays keyword on the proxies - problem is a large number of 
distros (including SuSE 10.2) ship with dbus-python < 0.80. To get round
this we explicitly convert the array back to a string on receipt, preserving
the encoding and thus not requiring multiple encodes/decodes to get it across
the IPC.

So the key data streams are now switched to byte-arrays. Not only will this
make things easier if code other than Python has to communicate with
sync-engine, but also should solve problems with syncing items with
non-English characters in it.

07/05/2007 - 190500 Dr J A Gow
------------------------------

Fix to task times. Airsync tasks do not appear to use timezones, although
it would seem that they can under certain circumstances. They do provide
a StartDate and UtcStartDate. It is impossible to map these directly to 
a vcal timezone in the absence of an AirSync timezone, so we first check
for an AirSync timezone, in which case we convert to local time. If we do
not have this, we look for UtcxxxxDate and use this as UTC. If all else
fails we just send in local time

This works, but there seems to be a bug in Evolution. The start date 
converts OK, but the end time seems to be out by the UTC offset. Unknown
if this affects other sync targets - needs testing.

RRA thread now runs in the absence of a subscribed RRA object. This prevents
weird timeouts on the device, but at the penalty of a 'noise' message from
librra indicating that there are no subscribed items.

Couple of encoding fixes added.

Fixed silly bug in file sync code that attempted to delete files that had
just been downloaded during initial sync. Also corrected debug log message
that was not correctly constructed.
